# keep

./: .gitignore  Config.xcconfig
Keep/: AuditLogView.swift  ContentView.swift  KeepApp.swift  LockScreenView.swift  SECURITY.md  SecretDetailView.swift  SecretsListView.swift  SettingsView.swift  VaultModel.swift  VaultService.swift
Keep.xcodeproj/: project.pbxproj
core/: .gitignore  README.md  pyproject.toml
core/keep/: __init__.py  cli.py  server.py  vault.py
